--- a/TransporteSerieNacionalFX/bin/visual/CalendarStatistics.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/CalendarStatistics.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarStatisticsController" stylesheets="@../styles/PrincipalMenu.css">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1148.0" stylesheets="@../styles/PrincipalMenu.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarStatisticsController">
    <children>
       <JFXTabPane layoutX="14.0" layoutY="64.0" prefHeight="503.0" prefWidth="1114.0">
          <tabs>
@@ -79,7 +79,7 @@
             <Font name="Segoe UI Emoji" size="20.0" />
          </font>
       </JFXButton>
-      <Label layoutX="513.0" layoutY="22.0" text="Estadísticas" textFill="#2f2484">
+      <Label layoutX="422.0" layoutY="26.0" text="Estadísticas de los calendarios" textFill="#2f2484">
          <font>
             <Font name="Segoe UI Emoji" size="23.0" />
          </font>
