--- a/TransporteSerieNacionalFX/src/visual/AdvanceConfiguration.fxml
+++ b/TransporteSerieNacionalFX/src/visual/AdvanceConfiguration.fxml
@@ -4,18 +4,19 @@
 <?import com.jfoenix.controls.JFXListView?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdvanceConfigurationController">
    <children>
-      <Label layoutX="165.0" layoutY="25.0" text="Mutaciones" textFill="#2f2484">
+      <Label layoutX="14.0" layoutY="125.0" text="Mutaciones" textFill="#2f2484">
          <font>
             <Font name="Segoe UI Symbol" size="30.0" />
          </font>
       </Label>
-      <JFXListView fx:id="mutationListView" layoutX="14.0" layoutY="89.0" prefHeight="487.0" prefWidth="456.0" stylesheets="@../styles/PrincipalMenu.css">
+      <JFXListView fx:id="mutationListView" layoutX="14.0" layoutY="177.0" prefHeight="392.0" prefWidth="1127.0" stylesheets="@../styles/PrincipalMenu.css">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -28,5 +29,11 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
+      <Label layoutX="14.0" layoutY="21.0" text="Iteraciones del algoritmo" textFill="#2f2484">
+         <font>
+            <Font name="Segoe UI Symbol" size="30.0" />
+         </font>
+      </Label>
+      <Spinner fx:id="iterationsSpinner" layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css" />
    </children>
 </AnchorPane>
