--- a/TransporteSerieNacionalFX/bin/visual/AdvanceConfiguration.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/AdvanceConfiguration.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdvanceConfigurationController">
    <children>
       <Label layoutX="14.0" layoutY="125.0" text="Mutaciones" textFill="#2f2484">
@@ -34,6 +33,9 @@
             <Font name="Segoe UI Symbol" size="30.0" />
          </font>
       </Label>
-      <Spinner fx:id="iterationsSpinner" layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css" />
+      <Spinner fx:id="iterationsSpinner" editable="true"  layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Spinner>
    </children>
 </AnchorPane>
