--- a/TransporteSerieNacionalFX/bin/visual/ConfigurationCalendar.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/ConfigurationCalendar.fxml
@@ -50,7 +50,7 @@
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
             </Label>
-            <JFXToggleButton fx:id="secondRoundButton" contentDisplay="RIGHT" onAction="#setSecondRound" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <JFXToggleButton fx:id="secondRoundButton" contentDisplay="RIGHT" onAction="#setSecondRound" prefHeight="76.0" prefWidth="135.0" size="12.0" text="Sí" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
@@ -126,7 +126,7 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Spinner>
-            <JFXToggleButton fx:id="champVsSub" contentDisplay="RIGHT" onAction="#setChampVsSub" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <JFXToggleButton fx:id="champVsSub" contentDisplay="RIGHT" onAction="#setChampVsSub" prefHeight="76.0" prefWidth="135.0" size="12.0" text="Sí" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
