--- a/TransporteSerieNacionalFX/src/visual/AdvanceConfiguration.fxml
+++ b/TransporteSerieNacionalFX/src/visual/AdvanceConfiguration.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdvanceConfigurationController">
    <children>
@@ -34,6 +34,16 @@
             <Font name="Segoe UI Symbol" size="30.0" />
          </font>
       </Label>
-      <Spinner fx:id="iterationsSpinner" layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css" />
+      <Spinner fx:id="iterationsSpinner" editable="true" layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <tooltip>
+            <Tooltip text="Si introduce un valor erróneo, por defecto se efectuará una iteración del algoritmo">
+               <font>
+                  <Font name="Segoe UI Emoji" size="24.0" />
+               </font>
+            </Tooltip>
+         </tooltip></Spinner>
    </children>
 </AnchorPane>
