--- a/TransporteSerieNacionalFX/src/visual/Calendar.fxml
+++ b/TransporteSerieNacionalFX/src/visual/Calendar.fxml
@@ -19,17 +19,20 @@
         </font>
     </Label>
 
-    <GridPane layoutX="273.0" layoutY="560.0" prefHeight="65.0" prefWidth="621.0">
+    <GridPane layoutX="22.0" layoutY="563.0" prefHeight="62.0" prefWidth="1112.0">
         <columnConstraints>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="311.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="310.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="212.4" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="212.4" />
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="212.4" />
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="212.4" />
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="212.4" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <JFXButton fx:id="statisticsBtn" onAction="#showStatistics" prefHeight="54.0" prefWidth="259.0" stylesheets="@../styles/PrincipalMenu.css" text="Mostrar estadísticas">
             <font>
-                <Font name="Segoe UI Emoji" size="20.0" />
+                <Font name="Segoe UI Emoji" size="16.0" />
             </font>
             <graphic>
                 <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
@@ -42,9 +45,9 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </JFXButton>
-        <JFXButton fx:id="configurationBtn" onAction="#showConfiguration" prefHeight="54.0" prefWidth="259.0" stylesheets="@../styles/PrincipalMenu.css" text="Configurar cambios" GridPane.columnIndex="1">
+        <JFXButton fx:id="configurationBtn" onAction="#showConfiguration" prefHeight="54.0" prefWidth="259.0" stylesheets="@../styles/PrincipalMenu.css" text="Configurar cambios" GridPane.columnIndex="4">
             <font>
-                <Font name="Segoe UI Emoji" size="20.0" />
+                <Font name="Segoe UI Emoji" size="16.0" />
             </font>
             <graphic>
                 <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
@@ -57,6 +60,51 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </JFXButton>
+      <JFXButton fx:id="itineraryBtn" onAction="#showItinerary" prefHeight="54.0" prefWidth="259.0" stylesheets="@../styles/PrincipalMenu.css" text="Itinerarios de equipos" GridPane.columnIndex="1">
+         <font>
+            <Font name="Segoe UI Emoji" size="16.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/destination.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="stadiumItineraryBtn" onAction="#showStadiumItinerary" prefHeight="54.0" prefWidth="259.0" stylesheets="@../styles/PrincipalMenu.css" text="Itinerarios de estadios" GridPane.columnIndex="2">
+         <font>
+            <Font name="Segoe UI Emoji" size="16.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/stadium.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="restrictionsBtn" onAction="#showRestrictions" prefHeight="54.0" prefWidth="259.0" stylesheets="@../styles/PrincipalMenu.css" text="Restricciones calendario" GridPane.columnIndex="3">
+         <font>
+            <Font name="Segoe UI Emoji" size="15.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/calendarRestrictions.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
     </GridPane>
    <JFXTabPane fx:id="calendarsTabPane" layoutX="14.0" layoutY="74.0" prefHeight="471.0" prefWidth="1120.0" />
        <!--<JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="88.0" prefHeight="471.0" prefWidth="1120.0"/>-->
