--- a/TransporteSerieNacionalFX/src/visual/Restrictions.fxml
+++ b/TransporteSerieNacionalFX/src/visual/Restrictions.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -7,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="692.0" style="-fx-background-color: white;" stylesheets="@../styles/PrincipalMenu.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RestrictionsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="445.0" prefWidth="693.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RestrictionsController">
     <children>
         <Label layoutX="185.0" layoutY="35.0" prefHeight="44.0" prefWidth="332.0" text="Restricciones del calendario" textFill="#2f2484">
             <font>
@@ -57,5 +59,13 @@
             </Label>
          </children>
       </GridPane>
+      <JFXButton fx:id="closeButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="567.0" layoutY="387.0" onAction="#closeButtonAction" prefHeight="44.0" prefWidth="112.0" stylesheets="@../styles/PrincipalMenu.css" text="Regresar" textAlignment="JUSTIFY">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font size="20.0" />
+         </font>
+      </JFXButton>
     </children>
 </AnchorPane>
