--- a/TransporteSerieNacionalFX/src/visual/TeamsItinerary.fxml
+++ b/TransporteSerieNacionalFX/src/visual/TeamsItinerary.fxml
@@ -25,7 +25,7 @@
             <Font name="Segoe UI Emoji" size="27.0" />
          </font>
       </Label>
-      <TableView fx:id="itineraryTable" layoutX="566.0" layoutY="58.0" prefHeight="565.0" prefWidth="573.0" stylesheets="@../styles/application.css" />
+      <TableView fx:id="itineraryTable" layoutX="566.0" layoutY="58.0" prefHeight="565.0" prefWidth="573.0" stylesheets="@../styles/PrincipalMenu.css" />
       <JFXButton fx:id="showItinerary" buttonType="RAISED" layoutX="405.0" layoutY="301.0" onAction="#displayItinerary" prefHeight="58.0" prefWidth="139.0" text="Ver Itinerario">
          <font>
             <Font name="Segoe UI Symbol" size="18.0" />
