--- a/TransporteSerieNacionalFX/bin/visual/Calendar.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Calendar.fxml
@@ -13,13 +13,13 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarController">
-    <Label layoutX="498.0" layoutY="15.0" text="Calendario" textFill="#2f2484">
+    <Label layoutX="498.0" layoutY="15.0" text="Calendario" textFill="#2f2484" AnchorPane.bottomAnchor="564.0" AnchorPane.leftAnchor="498.0" AnchorPane.rightAnchor="479.0" AnchorPane.topAnchor="15.0">
         <font>
             <Font name="Segoe UI Symbol" size="36.0" />
         </font>
     </Label>
 
-    <GridPane layoutX="22.0" layoutY="563.0" prefHeight="62.0" prefWidth="1112.0">
+    <GridPane layoutX="22.0" layoutY="563.0" prefHeight="62.0" prefWidth="1112.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="563.0">
         <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="212.4" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="212.4" />
@@ -90,7 +90,7 @@
          </cursor>
       </JFXButton>
     </GridPane>
-   <JFXTabPane fx:id="calendarsTabPane" layoutX="14.0" layoutY="74.0" prefHeight="471.0" prefWidth="1120.0" />
+   <JFXTabPane fx:id="calendarsTabPane" layoutX="14.0" layoutY="74.0" prefHeight="471.0" prefWidth="1120.0" AnchorPane.bottomAnchor="87.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="74.0" />
        <!--<JFXTabPane fx:id="calendarTabPane" layoutX="14.0" layoutY="88.0" prefHeight="471.0" prefWidth="1120.0"/>-->
 
 
