--- a/TransporteSerieNacionalFX/bin/visual/Home.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Home.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="1920.0" maxWidth="1920.0" minHeight="678.0" minWidth="829.0" prefHeight="768.0" prefWidth="1360.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
-    <AnchorPane fx:id="pane" layoutX="211.0" layoutY="137.0" prefHeight="632.0" prefWidth="1148.0">
+    <AnchorPane fx:id="pane" layoutX="210.0" layoutY="137.0" prefHeight="657.0" prefWidth="1152.0" AnchorPane.bottomAnchor="-26.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="137.0">
         <ImageView fx:id="logo" fitHeight="500.0" fitWidth="516.0" layoutX="338.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
             <Image url="@../resources/snb.png" />
         </ImageView>
@@ -49,9 +49,9 @@
             </Label>
         </children>
     </AnchorPane>
-    <AnchorPane layoutX="-3.0" layoutY="137.0" prefHeight="657.0" prefWidth="213.0" style="-fx-background-color: #2F2484; -fx-background-radius: 0 70 0 0;">
+    <AnchorPane layoutX="-3.0" layoutY="137.0" prefHeight="657.0" prefWidth="213.0" style="-fx-background-color: #2F2484; -fx-background-radius: 0 70 0 0;" AnchorPane.bottomAnchor="-26.0" AnchorPane.leftAnchor="-3.0" AnchorPane.topAnchor="137.0">
         <children>
-         <GridPane layoutX="7.0" layoutY="25.0" prefHeight="500.0" prefWidth="200.0">
+         <GridPane layoutX="7.0" layoutY="25.0" prefHeight="500.0" prefWidth="200.0" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="25.0">
            <columnConstraints>
              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
            </columnConstraints>
