--- a/TransporteSerieNacionalFX/bin/visual/Restrictions.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Restrictions.fxml
@@ -11,12 +11,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="445.0" prefWidth="693.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RestrictionsController">
     <children>
-        <Label layoutX="185.0" layoutY="35.0" prefHeight="44.0" prefWidth="332.0" text="Restricciones del calendario" textFill="#2f2484">
+        <Label layoutX="185.0" layoutY="35.0" prefHeight="44.0" prefWidth="332.0" text="Restricciones del calendario" textFill="#2f2484" AnchorPane.bottomAnchor="366.0" AnchorPane.leftAnchor="185.0" AnchorPane.rightAnchor="176.0" AnchorPane.topAnchor="35.0">
             <font>
                 <Font name="Segoe UI Emoji" size="27.0" />
             </font>
         </Label>
-      <GridPane layoutX="28.0" layoutY="89.0" prefHeight="311.0" prefWidth="665.0">
+      <GridPane layoutX="28.0" layoutY="89.0" prefHeight="311.0" prefWidth="665.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="89.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="569.0" minWidth="10.0" prefWidth="559.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.0" minWidth="10.0" prefWidth="92.0" />
@@ -59,7 +59,7 @@
             </Label>
          </children>
       </GridPane>
-      <JFXButton fx:id="closeButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="567.0" layoutY="387.0" onAction="#closeButtonAction" prefHeight="44.0" prefWidth="112.0" stylesheets="@../styles/PrincipalMenu.css" text="Regresar" textAlignment="JUSTIFY">
+      <JFXButton fx:id="closeButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="567.0" layoutY="387.0" onAction="#closeButtonAction" prefHeight="44.0" prefWidth="112.0" stylesheets="@../styles/PrincipalMenu.css" text="Regresar" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="567.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="387.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
