--- a/TransporteSerieNacionalFX/bin/visual/SelectGrid.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/SelectGrid.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane fx:id="panel" prefHeight="632.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SelectGridController">
     <children>
-        <JFXButton fx:id="saveLocations" layoutX="618.0" layoutY="575.0" onAction="#saveLocations" prefHeight="49.0" prefWidth="211.0" stylesheets="@../styles/PrincipalMenu.css" text="Generar Calendario" textFill="WHITE">
+        <JFXButton fx:id="saveLocations" layoutX="618.0" layoutY="575.0" onAction="#saveLocations" prefHeight="49.0" prefWidth="211.0" stylesheets="@../styles/PrincipalMenu.css" text="Generar Calendario" textFill="WHITE" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="618.0" AnchorPane.rightAnchor="319.0" AnchorPane.topAnchor="575.0">
             <font>
                 <Font name="Segoe UI Symbol" size="20.0" />
             </font>
@@ -19,19 +19,19 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </JFXButton>
-        <ScrollPane layoutY="1.0" prefHeight="560.0" prefWidth="1148.0">
+        <ScrollPane layoutY="1.0" prefHeight="560.0" prefWidth="1148.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
             <content>
                 <GridPane fx:id="selectionGrid" prefHeight="557.0" prefWidth="1147.0">
 
                 </GridPane>
             </content>
         </ScrollPane>
-        <Label layoutX="87.0" layoutY="570.0" prefHeight="52.0" prefWidth="494.0" text="Calendario Balanceado:" textFill="#2f2484">
+        <Label layoutX="87.0" layoutY="570.0" prefHeight="52.0" prefWidth="494.0" text="Calendario Balanceado:" textFill="#2f2484" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="87.0" AnchorPane.topAnchor="570.0">
             <font>
                 <Font name="Segoe UI Symbol" size="40.0" />
             </font>
         </Label>
-        <FontAwesomeIconView fx:id="balanceCalendar" fill="#10a132" glyphName="CHECK" layoutX="515.0" layoutY="616.0" size="48" />
-        <FontAwesomeIconView fx:id="notBalanceCalendar" fill="#f50000" glyphName="TIMES" layoutX="518.0" layoutY="616.0" size="48" text="" wrappingWidth="40.999997831881046" />
+        <FontAwesomeIconView fx:id="balanceCalendar" fill="#10a132" glyphName="CHECK" layoutX="515.0" layoutY="616.0" size="48" AnchorPane.bottomAnchor="8.20535659790039" AnchorPane.leftAnchor="515.0" AnchorPane.topAnchor="574.8571434020996" />
+        <FontAwesomeIconView fx:id="notBalanceCalendar" fill="#f50000" glyphName="TIMES" layoutX="518.0" layoutY="616.0" size="48" text="" wrappingWidth="40.999997831881046" AnchorPane.bottomAnchor="8.20535659790039" AnchorPane.leftAnchor="515.0" AnchorPane.topAnchor="574.8571434020996" />
     </children>
 </AnchorPane>
