--- a/TransporteSerieNacionalFX/bin/visual/Teams.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/Teams.fxml
@@ -10,17 +10,17 @@
 
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TeamsController">
     <children>
-        <JFXListView fx:id="teamsListView" layoutX="21.0" layoutY="85.0" prefHeight="497.0" prefWidth="310.0">
+        <JFXListView fx:id="teamsListView" layoutX="21.0" layoutY="85.0" prefHeight="497.0" prefWidth="333.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="794.0" AnchorPane.topAnchor="85.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></JFXListView>
-        <Pane fx:id="imagePane" layoutX="354.0" layoutY="85.0" prefHeight="497.0" prefWidth="354.0" />
-        <Label layoutX="528.0" layoutY="14.0" text="Equipos" textFill="#2f2484">
+        <Pane fx:id="imagePane" layoutX="364.0" layoutY="85.0" prefHeight="497.0" prefWidth="344.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="364.0" AnchorPane.rightAnchor="440.0" AnchorPane.topAnchor="85.0" />
+        <Label layoutX="452.0" layoutY="14.0" text="Equipos" textFill="#2f2484" AnchorPane.bottomAnchor="548.0" AnchorPane.leftAnchor="452.0" AnchorPane.rightAnchor="527.0" AnchorPane.topAnchor="14.0">
             <font>
                 <Font name="Segoe UI Symbol" size="48.0" />
             </font>
         </Label>
-      <Label layoutX="719.0" layoutY="55.0" text="Datos del Equipo" textFill="#2f2484">
+      <Label layoutX="722.0" layoutY="50.0" prefHeight="70.0" prefWidth="362.0" text="Datos del Equipo" textFill="#2f2484" AnchorPane.bottomAnchor="512.0" AnchorPane.leftAnchor="722.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="50.0">
          <font>
             <Font name="Segoe UI Symbol" size="48.0" />
          </font>
