--- a/TransporteSerieNacionalFX/src/visual/AdvanceConfiguration.fxml
+++ b/TransporteSerieNacionalFX/src/visual/AdvanceConfiguration.fxml
@@ -11,17 +11,17 @@
 
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdvanceConfigurationController">
    <children>
-      <Label layoutX="14.0" layoutY="125.0" text="Mutaciones" textFill="#2f2484">
+      <Label layoutX="14.0" layoutY="125.0" text="Mutaciones" textFill="#2f2484" AnchorPane.bottomAnchor="462.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="980.0" AnchorPane.topAnchor="125.0">
          <font>
             <Font name="Segoe UI Symbol" size="30.0" />
          </font>
       </Label>
-      <JFXListView fx:id="mutationListView" layoutX="14.0" layoutY="177.0" prefHeight="392.0" prefWidth="1127.0" stylesheets="@../styles/PrincipalMenu.css">
+      <JFXListView fx:id="mutationListView" layoutX="14.0" layoutY="177.0" prefHeight="392.0" prefWidth="1127.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="177.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXListView>
-      <JFXButton fx:id="select" layoutX="507.0" layoutY="576.0" onAction="#saveNewAdvancesConfigurations" prefHeight="51.0" prefWidth="135.0" stylesheets="@../styles/PrincipalMenu.css" text="Aceptar" textFill="#fcf8f8">
+      <JFXButton fx:id="select" layoutX="507.0" layoutY="576.0" onAction="#saveNewAdvancesConfigurations" prefHeight="51.0" prefWidth="135.0" stylesheets="@../styles/PrincipalMenu.css" text="Aceptar" textFill="#fcf8f8" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="507.0" AnchorPane.rightAnchor="506.0" AnchorPane.topAnchor="576.0">
          <font>
             <Font name="Segoe UI Symbol" size="20.0" />
          </font>
@@ -29,12 +29,12 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <Label layoutX="14.0" layoutY="21.0" text="Iteraciones del algoritmo" textFill="#2f2484">
+      <Label layoutX="14.0" layoutY="21.0" text="Iteraciones del algoritmo" textFill="#2f2484" AnchorPane.bottomAnchor="566.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="804.0" AnchorPane.topAnchor="21.0">
          <font>
             <Font name="Segoe UI Symbol" size="30.0" />
          </font>
       </Label>
-      <Spinner fx:id="iterationsSpinner" editable="true" layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css">
+      <Spinner fx:id="iterationsSpinner" editable="true" layoutX="14.0" layoutY="66.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="518.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="885.0" AnchorPane.topAnchor="66.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
