--- a/TransporteSerieNacionalFX/src/visual/Cruds.fxml
+++ b/TransporteSerieNacionalFX/src/visual/Cruds.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="506.0" prefWidth="776.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CrudsController">
+<AnchorPane prefHeight="506.0" prefWidth="776.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CrudsController">
    <children>
-      <GridPane prefHeight="499.0" prefWidth="776.0" stylesheets="@../styles/PrincipalMenu.css">
+      <GridPane prefHeight="499.0" prefWidth="776.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="161.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="162.0" />
