--- a/TransporteSerieNacionalFX/src/visual/TeamsItinerary.fxml
+++ b/TransporteSerieNacionalFX/src/visual/TeamsItinerary.fxml
@@ -10,23 +10,23 @@
 
 <AnchorPane prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" stylesheets="@../styles/PrincipalMenu.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TeamsItineraryController">
    <children>
-      <JFXListView fx:id="teamsListView" layoutX="9.0" layoutY="58.0" prefHeight="565.0" prefWidth="382.0" stylesheets="@../styles/application.css">
+      <JFXListView fx:id="teamsListView" layoutX="9.0" layoutY="58.0" prefHeight="565.0" prefWidth="382.0" stylesheets="@../styles/application.css" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="757.0" AnchorPane.topAnchor="58.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXListView>
-      <Label layoutX="139.0" layoutY="21.0" text="Equipos" textFill="#2f2484">
+      <Label layoutX="139.0" layoutY="21.0" text="Equipos" textFill="#2f2484" AnchorPane.bottomAnchor="580.0" AnchorPane.leftAnchor="139.0" AnchorPane.rightAnchor="914.0" AnchorPane.topAnchor="21.0">
          <font>
             <Font name="Segoe UI Emoji" size="27.0" />
          </font>
       </Label>
-      <Label layoutX="803.0" layoutY="21.0" text="Itinerario" textFill="#2f2484">
+      <Label layoutX="803.0" layoutY="21.0" text="Itinerario" textFill="#2f2484" AnchorPane.bottomAnchor="580.0" AnchorPane.leftAnchor="803.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="21.0">
          <font>
             <Font name="Segoe UI Emoji" size="27.0" />
          </font>
       </Label>
-      <TableView fx:id="itineraryTable" layoutX="566.0" layoutY="58.0" prefHeight="565.0" prefWidth="573.0" stylesheets="@../styles/PrincipalMenu.css" />
-      <JFXButton fx:id="showItinerary" buttonType="RAISED" layoutX="405.0" layoutY="301.0" onAction="#displayItinerary" prefHeight="58.0" prefWidth="139.0" text="Ver Itinerario">
+      <TableView fx:id="itineraryTable" layoutX="566.0" layoutY="58.0" prefHeight="565.0" prefWidth="573.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="566.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="58.0" />
+      <JFXButton fx:id="showItinerary" buttonType="RAISED" layoutX="405.0" layoutY="301.0" onAction="#displayItinerary" prefHeight="58.0" prefWidth="139.0" text="Ver Itinerario" AnchorPane.bottomAnchor="273.0" AnchorPane.leftAnchor="405.0" AnchorPane.rightAnchor="604.0" AnchorPane.topAnchor="301.0">
          <font>
             <Font name="Segoe UI Symbol" size="18.0" />
          </font>
